# agentic-context-engine

./: .env.example  .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ace.toml  ace_domain_playbook.json  mkdocs.yml  out  pyproject.toml
.claude/: settings.json
.claude/commands/: create-pr.md  release.md
.github/workflows/: docs.yml  test.yml
.specify/memory/: constitution.md
ace/: __init__.py  adaptation.py  async_learning.py  features.py  insight_source.py  llm.py  playbook.py  prompts.py  prompts_v2.py  prompts_v2_1.py  prompts_v3.py  roles.py  skillbook.py  updates.py
ace/cli/: cloud.py
ace/deduplication/: __init__.py  config.py  detector.py  manager.py  operations.py  prompts.py
ace/integrations/: __init__.py  browser_use.py  claude_code.py  claude_code_cli.py  langchain.py  litellm.py
ace/integrations/claude_code/: cli_client.py  learner.py
ace/llm_providers/: instructor_client.py  litellm_client.py
ace/observability/: opik_integration.py  tracers.py
ace/reflector/: prompts_rr_v3.py  prompts_rr_v5.py  recursive.py
ace_next/: __init__.py
ace_next/cli/: __init__.py  setup.py
ace_next/core/: __init__.py  context.py  skillbook.py  sub_runner.py
ace_next/implementations/: agent.py  reflector.py  skill_manager.py
ace_next/integrations/: __init__.py
ace_next/integrations/mcp/: __init__.py  adapters.py  config.py  errors.py  handlers.py  models.py  registry.py  server.py
ace_next/integrations/openclaw/: __init__.py  to_trace.py
ace_next/protocols/: skill_manager.py
ace_next/providers/: __init__.py  config.py  instructor.py  registry.py
ace_next/rr/: __init__.py  code_extraction.py  context.py  message_trimming.py  opik.py  prompts.py  runner.py  sandbox.py  steps.py  subagent.py
ace_next/runners/: ace.py  base.py  browser_use.py  claude_code.py  langchain.py  litellm.py  trace_analyser.py
ace_next/steps/: __init__.py  export_markdown.py  load_traces.py  observability.py  opik.py  reflect.py  tag.py  update.py
dev/: 404.html  index.html  sitemap.xml
dev/ACE_DESIGN/: index.html
dev/CLI_DESIGN/: index.html
dev/PIPELINE_DESIGN/: index.html
dev/RR_DESIGN/: index.html
dev/api/: index.html
dev/concepts/insight-levels/: index.html
dev/concepts/overview/: index.html
dev/concepts/roles/: index.html
dev/concepts/skillbook/: index.html
dev/concepts/updates/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quick-start/: index.html
dev/getting-started/setup/: index.html
dev/integrations/: index.html
dev/pipeline/: index.html
dev/search/: search_index.json
docs/: ACE_DESIGN.md  API_REFERENCE.md  CLI_DESIGN.md  COMPLETE_GUIDE_TO_ACE.md  INSIGHT_SOURCES.md  INTEGRATION_GUIDE.md  PIPELINE_DESIGN.md  PROMPTS.md  PROMPT_ENGINEERING.md  QUICK_START.md  RR_DESIGN.md  SETUP_GUIDE.md  TESTING_GUIDE.md  index.md
docs/api/: index.md
docs/concepts/: roles.md
docs/getting-started/: installation.md  quick-start.md  setup.md
docs/guides/: complete-guide.md  composing-pipelines.md  full-pipeline.md  integration.md  prompts.md  testing.md
docs/integrations/: hosted-api.md  index.md  litellm.md  mcp.md  openclaw.md  opik.md
docs/old_docs/: ACE2_PIPELINE(old).md  API_REFERENCE.md  OPIK.md
docs/pipeline/: api-reference.md  branching.md  core-concepts.md  custom-steps.md  error-handling.md  execution.md  index.md  quick-start.md
examples/: README.md  custom_integration_example.py  lm_studio_example.py
examples/ace_next/: ace_next_demo.ipynb  ace_next_demo.py  mcp_client_demo.py  rr_demo.py  rr_opik_demo.py
examples/agent-prompt-optimizer/: README.md
examples/agentic-system-prompting/: agentic_system_prompting.py  recursive_agentic_system_prompting.py
examples/browser-use/: TEMPLATE.py  ace_domain_checker.py  baseline_domain_checker.py  common.py
examples/claude-code-loop/: README.md  ace_loop.py  setup.sh
examples/helicone/: README.md  evaluate_skillbook.py
examples/langchain/: README.md  agent_with_tools_example.py  async_learning_example.py  simple_chain_example.py
examples/litellm/: README.md  async_learning_example.py  bedrock_insight_source_test.py  deduplication_example.py  litellm_ace_example.py  playbook_persistence.py  seahorse_emoji_ace.py  simple_ace_example.py  test_duplicates.json
examples/local-models/: README.md  lm_studio_example.py  lmstudio_starter_template.py  ollama_starter_template.py
examples/openclaw/: AGENTS.md.snippet  Dockerfile.ace  README.md  ace-learn.sh  learn_from_traces.py  setup.py
examples/opik/: test_litellm_opik.py  test_offline_replay_traces.py  test_online_realtime_traces.py  test_pipeline_opik.py  test_traces_passthrough.py
examples/pipeline_composition/: compose_custom_pipeline.py
examples/pipeline_ex/: pipeline_demo.ipynb  pipeline_demo.py
examples/prompts/: README.md
pipeline/: __init__.py  branch.py  context.py  errors.py  pipeline.py  protocol.py  sub_runner.py
scripts/: explain_ace_performance.py  pipeline_test.py
specs/001-openclaw-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ace-mcp-server/: spec.md
tests/: conftest.py  test_ace_next_core.py  test_ace_next_mcp_handlers.py  test_ace_next_mcp_models.py  test_ace_next_mcp_optional.py  test_ace_next_mcp_registry.py  test_ace_next_mcp_server.py  test_ace_next_steps.py  test_adaptation.py  test_async_learning.py  test_cloud_cli.py  test_cloud_e2e.py  test_deduplication.py  test_insight_source.py  test_instructor_integration.py  test_integration.py  test_litellm_client.py  test_load_traces_step.py  test_openclaw.py  test_pipeline_exports.py  test_prompts_v2_1.py  test_recursive_reflector.py  test_roles.py  test_sandbox.py  test_skillbook.py  test_updates.py
tests/integrations/: test_browser_use.py  test_langchain.py
tests/pipeline_engine/: conftest.py  test_branch.py  test_context.py  test_errors.py  test_pipeline.py  test_pipeline_e2e.py  test_protocol.py  test_sub_runner.py
tests/test_rr_pipeline/: test_context.py  test_rr_stress.py  test_runner.py  test_steps.py
(+48 files in other folders)
